--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ google-auth==1.6.3
 google-cloud-core==0.29.1
 google-cloud-translate==1.4.0
 googleapis-common-protos==1.5.9
-grpcio==1.20.0
+# grpcio==1.20.0
 guess-language-spirit==0.5.3
 idna==2.8
 itsdangerous==1.1.0
