--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ cachetools==3.1.0
 certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
+colorama==0.4.1
 dominate==2.3.5
 elasticsearch==7.0.0
 Flask==1.0.2
 Flask-Babel==0.12.2
 Flask-Bootstrap==3.3.7.1
+Flask-HTTPAuth==3.2.4
 Flask-Login==0.4.1
 Flask-Migrate==2.4.0
 Flask-Moment==0.7.0
@@ -19,8 +21,9 @@ google-auth==1.6.3
 google-cloud-core==0.29.1
 google-cloud-translate==1.4.0
 googleapis-common-protos==1.5.9
-# grpcio==1.20.0
+grpcio==1.20.0
 guess-language-spirit==0.5.3
+httpie==1.0.2
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
@@ -29,11 +32,14 @@ MarkupSafe==1.1.1
 protobuf==3.7.1
 pyasn1==0.4.5
 pyasn1-modules==0.2.5
+Pygments==2.3.1
 python-dateutil==2.8.0
 python-dotenv==0.10.1
 python-editor==1.0.4
 pytz==2019.1
+redis==3.2.1
 requests==2.21.0
+rq==1.0
 rsa==4.0
 six==1.12.0
 SQLAlchemy==1.3.3
